--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -8,8 +8,8 @@
         "allowJs": true,
         "moduleResolution": "Node",
         // this option looks for the specific package in the node_modules folder
-        // "outDir": "build",
-        "rootDir": "src",
+        "outDir": "build",
+        "rootDir": "/",
         "strict": true,
         "noImplicitAny": true,
         "esModuleInterop": true,
