--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
   },
   "devDependencies": {
     "@types/node": "^20.4.1",
+    "cors": "^2.8.5",
     "nodemon": "^3.0.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.6"
