--- a/server/package.json
+++ b/server/package.json
@@ -13,9 +13,12 @@
   "dependencies": {
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.3.2"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.13",
+    "@types/jsonwebtoken": "^9.0.2",
     "@types/node": "^20.4.1",
     "cors": "^2.8.5",
     "nodemon": "^3.0.1",
