--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon src/server",
-    "start": "tsc src/server"
+    "start": "pnpm run build && nodemon build/server"
   },
   "keywords": [],
   "author": "",
@@ -18,6 +18,7 @@
   },
   "devDependencies": {
     "@types/cors": "^2.8.13",
+    "@types/express": "^4.17.18",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/node": "^20.4.1",
     "cors": "^2.8.5",
