initialize passport config

--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -13,6 +13,9 @@
         "strict": true,
         "noImplicitAny": true,
         "esModuleInterop": true,
-        "resolveJsonModule": true
+        "resolveJsonModule": true,
+        "paths": {
+            "@/*": ["./src/*"]
+          }
     }
 }
