--- a/server/package.json
+++ b/server/package.json
@@ -13,14 +13,21 @@
   "dependencies": {
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "jsonwebtoken": "^9.0.1",
-    "mongoose": "^7.3.2"
+    "mongoose": "^7.3.2",
+    "passport": "^0.6.0",
+    "passport-github": "^1.1.0",
+    "passport-google-oauth20": "^2.0.0",
+    "passport-local": "^1.0.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.18",
+    "@types/express-session": "^1.17.8",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/node": "^20.4.1",
+    "@types/passport": "^1.0.13",
     "cors": "^2.8.5",
     "nodemon": "^3.0.1",
     "ts-node": "^10.9.1",
