--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
@@ -22,12 +23,16 @@
     "passport-local": "^1.0.0"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.4",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.18",
     "@types/express-session": "^1.17.8",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/node": "^20.4.1",
     "@types/passport": "^1.0.13",
+    "@types/passport-github": "^1.1.10",
+    "@types/passport-google-oauth20": "^2.0.12",
+    "@types/passport-local": "^1.0.36",
     "cors": "^2.8.5",
     "nodemon": "^3.0.1",
     "ts-node": "^10.9.1",
