--- a/server/package.json
+++ b/server/package.json
@@ -18,9 +18,11 @@
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.3.2",
     "passport": "^0.6.0",
+    "passport-apple": "^2.0.2",
     "passport-github": "^1.1.0",
     "passport-google-oauth20": "^2.0.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "socket.io": "^4.7.2"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.4",
@@ -30,6 +32,7 @@
     "@types/jsonwebtoken": "^9.0.2",
     "@types/node": "^20.4.1",
     "@types/passport": "^1.0.13",
+    "@types/passport-apple": "^2.0.0",
     "@types/passport-github": "^1.1.10",
     "@types/passport-google-oauth20": "^2.0.12",
     "@types/passport-local": "^1.0.36",
