--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "react": "latest",
     "react-dom": "latest",
     "react-icons": "^4.11.0",
+    "socket.io-client": "^4.7.2",
     "styled-components": "^6.0.8"
   },
   "devDependencies": {
